# AI-Assistant-with-Anthropic-and-OpenAI-Model

./: .gitignore  README.md  app.py  pyproject.toml
src/: app.py  config.py  main.py
src/llm/: anthropic_provider.py  base.py  openai_provider.py
src/tests/: test_config.py  test_cost_tracker.py  test_llm_providers.py
src/utils/: conversation.py  cost_tracker.py  logger.py
ui/: app.py  pyproject.toml
