[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = "AI Assistant with OpenAI and Anthropic"
authors = ["Talha Rana"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
anthropic = ">=0.75.0"
openai = ">=2.9.0"
pydantic = ">=2.12.5"
pydantic-settings = ">=2.12.0"
python-dotenv = ">=1.2.1"
rich = ">=14.2.0"
streamlit = ">=1.52.1"
tiktoken = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
